// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericSelector renders markup with state 1`] = `
<ng-ais-numeric-selector
  operator={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericSelector"
  >
    
        
    <ng-ais-header
      classname="ais-NumericSelector-header ais-header"
      ng-reflect-class-name="ais-NumericSelector-header ais"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-NumericSelector-body ais-body"
    >
      
          
      <select
        class="ais-NumericSelector-select"
      >
        
            
        
        <option
          class="ais-NumericSelector-option"
          value="10"
        >
          
              foo
            
        </option>
        <option
          class="ais-NumericSelector-option"
          value="20"
        >
          
              bar
            
        </option>
        <option
          class="ais-NumericSelector-option"
          value="30"
        >
          
              foobar
            
        </option>
        <option
          class="ais-NumericSelector-option"
          value="40"
        >
          
              barfoo
            
        </option>
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-NumericSelector-footer ais-footer"
      ng-reflect-class-name="ais-NumericSelector-footer ais"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-numeric-selector>
`;

exports[`NumericSelector renders markup without state 1`] = `
<ng-ais-numeric-selector
  operator={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericSelector"
  >
    
        
    <ng-ais-header
      classname="ais-NumericSelector-header ais-header"
      ng-reflect-class-name="ais-NumericSelector-header ais"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-NumericSelector-body ais-body"
    >
      
          
      <select
        class="ais-NumericSelector-select"
      >
        
            
        
        
          
      </select>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-NumericSelector-footer ais-footer"
      ng-reflect-class-name="ais-NumericSelector-footer ais"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-numeric-selector>
`;
